# SIMCAM_SDK

./: README.md
examples/convert/: compile.sh  labelmap.prototxt
examples/detect/: Detect_Demo  Detect_Demo.c  Makefile
examples/detection/: Detect_Demo  Detect_Demo.c
examples/face_recognition/: Demo  Demo.c  Makefile
examples/face_recognition/extract_face_features/: CMakeLists.txt  Makefile  faces.db  main  main.cpp  sqlite_db.cpp
examples/models/babyclimb/: info.txt  labelmap.prototxt
examples/models/emotion/: deploy.prototxt  emotion  emotion.caffemodel  info.txt
examples/models/gender/: gender  gender_model_S2D.caffemodel  gender_model_S2D.prototxt  info.txt
examples/models/gesture/: deploy.prototxt  info.txt  labelmap.prototxt
examples/models/lcnn/: info.txt  lcnn  light_cnn_deploy.prototxt
examples/models/person_car_face/: labelmap.prototxt  person_face.graph  person_face_iter_96000.caffemodel
examples/models/person_face/: deploy.prototxt  info.txt  person_face.caffemodel
examples/models/pet_magic/: info.txt  labelmap.prototxt
libs/: IOCtrl.h  SIMCAM_lib.h  serial_api.h  spi_api.h  sqlite_db.h
libs/sqlite_lib/: libsqlite3.so.0.8.6
src/: Detect_Server_Process  config.txt  emotion  gender  rtl_hostapd_2G.conf
src/voice/: dog.pcm
tools/: install_opencv.sh
tools/arm_toolchain/: cross.v300.install
tools/mv_toolchain/model_conversion/: file.txt  install-ncsdk.sh  ncsdk.conf  requirements.txt  requirements_apt.txt  uninstall-ncsdk.sh  version.txt
train/: gen.py  gen_model.sh  merge_bn.py  solver_train.prototxt  test.sh  train.sh
(+260 files in other folders)
